[package]
name = "hashlife"
version = "0.1.0"
authors = ["AlephAlpha <alephalpha911@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ca-formats = "0.3.4"
ca-rules = "0.3.3"
rustc-hash = "1.1.0"
slab = "0.4.7"

[dev-dependencies]
criterion = "0.5.0"

[[bench]]
name = "bench"
harness = false

[workspace]
members = ["hashlife-sdl"]
