[package]
name = "hashlife"
version = "0.1.0"
authors = ["AlephAlpha <alephalpha911@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ca-formats = "0.3.5"
ca-rules = "0.3.5"
rustc-hash = "2.1.2"
slab = "0.4.12"

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "bench"
harness = false

[workspace]
members = ["hashlife-sdl"]
