[package]
name = "hashlife-sdl"
version = "0.1.0"
authors = ["AlephAlpha <alephalpha911@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ca-formats = "0.2.1"
hashlife = { path = "../" }
rand = "0.7.3"
sdl2 = "0.34.3"
